--- a/myawesomecart/shop/templates/shop/index.html
+++ b/myawesomecart/shop/templates/shop/index.html
@@ -87,7 +87,8 @@ padding-right: 0;
 // Find out the cart items from localStorage
 if (localStorage.getItem('cart') == null) {
     var cart = {};
-} else {
+}
+else {
     cart = JSON.parse(localStorage.getItem('cart'));
     updateCart(cart);
 }
@@ -98,7 +99,8 @@ $('.divpr').on('click', 'button.cart', function() {
     if (cart[idstr] != undefined) {
         qty = cart[idstr][0] + 1;
 
-    } else {
+    }
+    else {
         qty = 1;
         name = document.getElementById('name'+idstr).innerHTML
         cart[idstr] = [qty, name];
